// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-document-public-access should delete public access for a valid document 1`] = `
{
  "content": [
    {
      "text": "Error using delete-document-public-access:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "Entry not found",
    "status": 404,
    "detail": "The specified entry was not found.",
    "operationStatus": "EntryNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`delete-document-public-access should delete public access for a valid document 2`] = `
{
  "content": [
    {
      "text": "Error using get-document-public-access:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "Entry not found",
    "status": 404,
    "detail": "The specified entry was not found.",
    "operationStatus": "EntryNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`delete-document-public-access should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error using delete-document-public-access:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The document could not be found",
    "status": 404,
    "operationStatus": "ContentNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;
